[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/city/building/exterior.png" type="Texture" id=1]
[ext_resource path="res://scenes/city/building/building.gd" type="Script" id=2]
[ext_resource path="res://scenes/city/building/hallway.png" type="Texture" id=3]
[ext_resource path="res://scenes/city/building/stairs.png" type="Texture" id=4]
[ext_resource path="res://scenes/city/building/floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/city/building/interior_shadow.png" type="Texture" id=6]
[ext_resource path="res://scenes/city/building/cat.png" type="Texture" id=7]
[ext_resource path="res://scenes/city/building/facade.png" type="Texture" id=8]
[ext_resource path="res://scenes/city/building/building_shadow.png" type="Texture" id=9]

[sub_resource type="Animation" id=7]
resource_name = "wag"
length = 1.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1.3, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49.5, 2 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -65, -144 )
b = Vector2( -65, 144 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -65, -144, -65, 144, 65, 144, 65, -144 )

[sub_resource type="Animation" id=4]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Facade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Interior/Floors/Sprite:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "exit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Facade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Interior/Floors/Sprite:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Building" type="Node2D"]
script = ExtResource( 2 )

[node name="Exterior" type="Sprite" parent="."]
position = Vector2( 1, 0 )
z_index = -10
texture = ExtResource( 1 )

[node name="Facade" type="Node2D" parent="."]
position = Vector2( 3, 0 )
z_index = -10

[node name="Sprite" type="Sprite" parent="Facade"]
texture = ExtResource( 8 )

[node name="Cat" type="Sprite" parent="Facade"]
position = Vector2( -24, 32 )
texture = ExtResource( 7 )
hframes = 8
frame = 6

[node name="CatAnimation" type="AnimationPlayer" parent="Facade"]
anims/wag = SubResource( 7 )

[node name="Interior" type="Node2D" parent="."]
position = Vector2( 3, -8 )
z_index = -15

[node name="Background" type="Sprite" parent="Interior"]
texture = ExtResource( 3 )

[node name="Floors" type="Node2D" parent="Interior"]

[node name="Sprite" type="Sprite" parent="Interior/Floors"]
texture = ExtResource( 4 )

[node name="Floor_1" parent="Interior/Floors" instance=ExtResource( 5 )]
position = Vector2( 0, 102 )
enabled = false

[node name="Floor_2" parent="Interior/Floors" instance=ExtResource( 5 )]
position = Vector2( 0, 62 )
scale = Vector2( -1, 1 )
enabled = false

[node name="Floor_3" parent="Interior/Floors" instance=ExtResource( 5 )]
position = Vector2( 0, 22 )
enabled = false

[node name="Floor_4" parent="Interior/Floors" instance=ExtResource( 5 )]
position = Vector2( 0, -18 )
scale = Vector2( -1, 1 )
enabled = false

[node name="Floor_5" parent="Interior/Floors" instance=ExtResource( 5 )]
position = Vector2( 0, -58 )
enabled = false

[node name="Floor_6" parent="Interior/Floors" instance=ExtResource( 5 )]
position = Vector2( 0, -98 )
scale = Vector2( -1, 1 )
enabled = false

[node name="Floor_7" parent="Interior/Floors" instance=ExtResource( 5 )]
position = Vector2( 0, -138 )
enabled = false

[node name="GroundFloor" type="StaticBody2D" parent="Interior"]
collision_layer = 2

[node name="Stairs_0" type="CollisionPolygon2D" parent="Interior/GroundFloor"]
position = Vector2( -38, 142 )
polygon = PoolVector2Array( 3, 2, -13, 2, 3, -2 )

[node name="Floor_0" type="CollisionShape2D" parent="Interior/GroundFloor"]
position = Vector2( 14.5, 142 )
shape = SubResource( 2 )

[node name="FloorShadow" type="Light2D" parent="Interior/GroundFloor"]
position = Vector2( 0, 142.5 )
texture = ExtResource( 6 )
mode = 2
range_item_cull_mask = 0

[node name="InteriorArea" type="Area2D" parent="Interior"]
collision_layer = 0

[node name="Collision" type="CollisionPolygon2D" parent="Interior/InteriorArea"]
polygon = PoolVector2Array( -52, 65, -52, 145, 64, 144, 64, -144, -64, -144, -64, 65 )

[node name="Walls" type="StaticBody2D" parent="Interior"]
collision_layer = 0
collision_mask = 0

[node name="Collision_1" type="CollisionShape2D" parent="Interior/Walls"]
position = Vector2( 1, 0 )
shape = SubResource( 3 )

[node name="Collision_2" type="CollisionShape2D" parent="Interior/Walls"]
position = Vector2( 129, 0 )
shape = SubResource( 3 )

[node name="Occluder" type="LightOccluder2D" parent="Interior/Walls"]
light_mask = 0
occluder = SubResource( 6 )
light_mask = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 4 )
anims/exit = SubResource( 5 )

[node name="Shadow" type="Light2D" parent="."]
position = Vector2( -70, 97 )
texture = ExtResource( 9 )
offset = Vector2( -10, 0 )
mode = 2

[connection signal="body_entered" from="Interior/InteriorArea" to="." method="_on_InteriorArea_body_entered"]
[connection signal="body_exited" from="Interior/InteriorArea" to="." method="_on_InteriorArea_body_exited"]
